ContractNegotiationService: refactor signature of DTO and method (#989)
* introduced object for offer, asset and policy id

* adds explicit assetId and policyId fields to ContractOffer

* undo required field
